# teach-me

./: .gitignore  .version-bump.json  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/harness/: VERSION.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: release.yml
.kimi-plugin/: plugin.json
.opencode/: INSTALL.md
docs/: release-checklist.md
docs/superpowers/plans/: 2026-07-15-teach-me-eval-harness-sdk-redesign.md  2026-07-15-teach-me-eval-harness.md  2026-07-16-teach-me-review-retention.md  2026-07-19-review-eval-seeding.md
docs/superpowers/specs/: 2026-07-15-teach-me-eval-harness-design.md  2026-07-15-teach-me-eval-harness-sdk-redesign.md  2026-07-16-teach-me-review-retention-design.md  2026-07-19-review-eval-seeding-design.md
evals/: .env.example  README.md  asserts.py  judge.py  providers.py  pyproject.toml  run_evals.py  seed.py  session.py  transcript.py
evals/scenarios/: f1-no-dump.yaml  f3-mastery-gate.yaml  f5-fatigue-terminal.yaml  m1-socratic-first.yaml  m10-unknown-flag.yaml  m5-just-tell-me.yaml  r1-review-recall.yaml  r2-review-fail-relearn.yaml
scripts/: bump-version.py  validate.py  validate_skill.py
skills/teach-me/: SKILL.md
skills/teach-me/scripts/: store.py  (+1 more)
tests/: skill_live_check.py  teach-me-scenarios.md  test_archive.py  test_asserts.py  test_judge.py  test_providers.py  test_run_evals.py  test_seed.py  test_session.py  test_store.py  test_transcript.py
(+8 files in other folders)
