[project]
name = "teach-me-evals"
version = "0.1.0"
description = "Behavioral eval harness for the teach-me skill (paid, local, non-CI)."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1",
    "anthropic>=0.40",
    "openai>=1.40",
    "pyyaml>=6,<7",
]

[dependency-groups]
dev = ["pytest>=8"]
